<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/me_layout_edit"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="@dimen/dp_16"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardMaxElevation="@dimen/dp_4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/me_profile"
                android:layout_width="@dimen/dp_72"
                android:layout_height="@dimen/dp_72"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="@dimen/dp_16"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/me_tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/me_profile"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/me_profile"
                android:text="点击登录"
                android:textColor="@color/text_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/me_tv_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/me_tv_nickname"
                android:layout_below="@id/me_tv_nickname"
                android:layout_toRightOf="@id/me_profile"
                android:text="查看或编辑个人主页"
                android:textColor="@color/text_pinglun"
                android:textSize="16sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:cardMaxElevation="@dimen/dp_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/me_linerlayout_mymessage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/me_iv_mymessage"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/iv_message" />

                <TextView
                    android:id="@+id/me_tv_mymessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:gravity="center"
                    android:text="@string/text_mymessage"
                    android:textSize="@dimen/sp_16"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/me_iv_mymessage"
                    android:layout_toEndOf="@+id/me_iv_mymessage"
                    android:layout_marginStart="14dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:visibility="gone"
                    android:id="@+id/redpoint"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/redpoint" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:background="#f2f2f2"></TextView>

            <RelativeLayout
                android:id="@+id/me_linerlayout_mycollection"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/me_iv_mycollection"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:src="@drawable/iv_collection" />

                <TextView
                    android:id="@+id/me_tv_mycollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_toRightOf="@id/me_iv_mycollection"
                    android:gravity="center"
                    android:text="@string/text_mycollection"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:background="#f2f2f2">

            </TextView>

            <RelativeLayout
                android:id="@+id/me_linerlayout_myquestions"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:paddingRight="@dimen/dp_16">

                <ImageView
                    android:id="@+id/me_iv_myquestions"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:src="@drawable/iv_myquestions" />

                <TextView
                    android:id="@+id/me_tv_myquestions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_toRightOf="@id/me_iv_myquestions"
                    android:gravity="center"
                    android:text="@string/text_myquestions"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:background="#f2f2f2">

            </TextView>

            <RelativeLayout
                android:id="@+id/me_linerlayout_myanswer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:paddingRight="@dimen/dp_16">

                <ImageView
                    android:id="@+id/me_iv_myanswer"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:src="@drawable/iv_myanswer" />

                <TextView
                    android:id="@+id/me_tv_myanswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:gravity="center"
                    android:text="@string/text_myanswer"
                    android:textSize="@dimen/sp_16"
                    android:layout_alignTop="@+id/me_iv_myanswer"
                    android:layout_toRightOf="@+id/me_iv_myanswer"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:background="#f2f2f2"></TextView>

            <RelativeLayout
                android:id="@+id/me_linerlayout_myrecentlook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:paddingRight="@dimen/dp_16">

                <ImageView
                    android:id="@+id/me_iv_recentlook"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:src="@drawable/iv_recentlook" />

                <TextView
                    android:id="@+id/me_tv_recentlook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_toRightOf="@id/me_iv_recentlook"
                    android:gravity="center"
                    android:text="@string/text_recentlook"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:background="#f2f2f2">

            </TextView>

            <RelativeLayout
                android:id="@+id/me_linerlayout_settings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:paddingRight="@dimen/dp_16">

                <ImageView
                    android:id="@+id/me_iv_settings"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:src="@drawable/iv_settings" />

                <TextView
                    android:id="@+id/me_tv_mysettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_toRightOf="@id/me_iv_settings"
                    android:gravity="center"
                    android:text="@string/text_settings"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/me_layout_signout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/dp_8"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardMaxElevation="@dimen/dp_4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_signout"
            android:textColor="@color/text_red"
            android:textSize="@dimen/sp_16" />

    </android.support.v7.widget.CardView>
</LinearLayout>